Mrtvo dizanje.html

--- a/Mrtvo dizanje.html.html
+++ b/Mrtvo dizanje.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Powerlifting</title>
+    <title>Mrtvo dizanje</title>
     <style>
         * {
             box-sizing: border-box;
@@ -75,9 +75,9 @@
   
     <div class="left">
 		<div class="link-container">
-			<a href="" target="_blank">Powerlifting</a>
-			<a href="" target="_blank">Čučanj</a>
-			<a href="" target="_blank">Potisak s klupe</a>
+			<a href="https://vitezov.github.io/Powerlifting/powerlifting1.html" target="_blank">Powerlifting</a>
+			<a href="https://vitezov.github.io/-u-anj/cucanj.html" target="_blank">Čučanj</a>
+			<a href="https://vitezov.github.io/Potisak-s-klupe/Potisak%20s%20klupe.html" target="_blank">Potisak s klupe</a>
 		</div>
     </div>
   
